# sdk-harness

./: .gitignore  PLAN.md  README.md  TESTING.md  pyproject.toml
src/migration_harness/: __init__.py  config.py  main.py  orchestrator.py  schema.py
src/migration_harness/agents/: __init__.py  definitions.py  prompts.py
src/migration_harness/hooks/: __init__.py  security.py  validation_gates.py
src/migration_harness/pipeline/: __init__.py  gates.py  gradle_runner.py  rollback.py  runner.py
src/migration_harness/state/: manager.py  progress.py
src/migration_harness/tools/: __init__.py  registry.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: sample_config.json  sample_discovery.json  sample_generated.json  sample_narrowed.json
tests/fixtures/java_repo/: build.gradle  gradle.properties  pom.xml
tests/fixtures/java_repo/src/main/java/com/example/: ApiClient.java
tests/fixtures/java_repo/src/main/resources/: application.properties
tests/fixtures/java_repo/src/test/java/com/example/: ApiClientTest.java
tests/fixtures/js_repo/: package.json
tests/fixtures/js_repo/src/: api.js
tests/integration/: test_orchestrator.py  test_rollback.py
tests/unit/: test_agent_definitions.py  test_cli.py  test_config.py  test_gates.py  test_gradle_runner.py  test_hooks.py  test_progress.py  test_schema.py  test_state_manager.py  test_tools.py
